fix: overlapping section

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,6 @@
 .app__container {
   scroll-snap-align: center;
   width: 100%;
-  height: 100vh;
   padding-top: 74px;
 
   display: flex;
@@ -29,8 +28,8 @@
   }
 }
 
-.app__container#contact, .app__container#testimonial, .app__container#skills {
-  height: auto;
+.app__container#home {
+  height: 100vh;
 }
 
 .app__flex {
@@ -107,7 +106,7 @@
     font-size: 2rem;
     text-align: left;
   }
-  
+
   &--subheader {
     font-size: 1rem;
     font-weight: 500;
